--- a/libro/html/incluir/pandoc/html.template
+++ b/libro/html/incluir/pandoc/html.template
@@ -65,6 +65,8 @@
 						
 						<ul>
 					    	<li><strong>Autor</strong>: <a href="http://dzign.us/">Leandro D'Onofrio</a> para <a href="http://comunidadjoomla.org/">Comunidad Joomla</a> y <a href="http://biblioteca.comunidadjoomla.org/">Biblioteca Comunidad Joomla</a></li>
+					    	
+					    	<li><strong>Correcciones</strong>: <a href="http://comunidadjoomla.org/">Rafael Gómez</a> y <a href="http://comunidadjoomla.org/">Gustavo Raúl Aragón</a>.</li>
 					
 					    	<li><strong>Licencia</strong>: <a href="http://creativecommons.org/licenses/by-nc-sa/2.5/es/">Creative Commons Reconocimiento-NoComercial-CompartirIgual 2.5 España</a></li>
 					    </ul>
