Enlace a la explicacion sobre como contribuir

--- a/libro/html/incluir/pandoc/html.template
+++ b/libro/html/incluir/pandoc/html.template
@@ -75,7 +75,7 @@
 					
 					<p>El material de aprendizaje y el código fuente de los ejemplos que se desarrollan en el libro están hospedados en un <a href="https://github.com/dzignus/manual_jplantillas">repositorio de Github</a>. Desde allí es posible descargar un archivo .zip o .tar con todo el material.</p>
 					
-					<h4><a href="https://github.com/dzignus/manual_jplantillas#readme">¿Tienes correcciones o mejoras en el material?</a></h4>
+					<h4><a href="https://github.com/dzignus/manual_jplantillas/wiki/%C2%BFTienes-correcciones,-mejoras-o-quieres-colaborar-en-el-libro%3F">¿Tienes correcciones, mejoras o quieres colaborar en el libro?</a></h4>
 					
 				</div>
 				
